# ArduinoMock

./: .bumpversion.toml  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  justfile  lefthook.yml  library.json
.githooks/: branch-protection.sh  version-validation.sh
.github/workflows/: auto-tag.yml  ci.yml  clang-tidy.yml  create-rc.yml  version-check.yml
.just/: build.just  format.just  lint.just  test.just
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
_codeql_build_dir/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake  queue_example  semaphore_example  task_example
_codeql_build_dir/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  queue_gtest  semaphore_gtest  task_gtest  times_gtest
include/: esp_err.h  esp_log.h
include/freertos/: FreeRTOS.h  portmacro.h  projdefs.h  queue.h  semphr.h  task.h  timers.h
makefiles/: development.mk  variables.mk
src/: Arduino.h  Client.h  EEPROM.h  EspClass.cpp  EspClass.h  HardwareSerial.cpp  HardwareSerial.h  IPAddress.h  LittleFS.h  Preferences.h  Print.cpp  Print.h  SPI.h  SPIFFS.cpp  SPIFFS.h  Stream.h  StreamGMock.cpp  StreamStub.cpp  TimeAlarms.cpp  TimeAlarms.h  TimeLib.h  Update.h  Updater.cpp  Updater.h  WString.h  WiFi.cpp  WiFi.h  WiFiClient.cpp  WiFiClient.h  WiFiClientSecure.h  Wifi.cpp  Wifi.h  Wire.cpp  Wire.h  esp_heap.h  esp_log.c  esp_log.h  esp_now.h  esp_task_wtd.h  esp_wifi.h  (+6 more)
src/freertos/: FreeRTOS.h  projdefs.h  timers.h
src/freertos/queue/: queue.cpp  queue.h
src/freertos/semaphore/: semaphore.h  (+1 more)
src/stream/: MockStream.cpp  MockStream.h  StreamGMock.cpp  StreamGMock.h
test/: CMakeLists.txt  arduino_freertos_gtest.cpp  eeprom_gtest.cpp  esp32_apis_gtest.cpp  esp32_core_mocks_gtest.cpp  esp_now_gtest.cpp  gpio_interrupt_gtest.cpp  hardware_serial_gtest.cpp  md5builder_gtest.cpp  missing_apis_gtest.cpp  queue_gtest.cpp  spi_preferences_gtest.cpp  spiffs_gtest.cpp  stream_gmock_test.cpp  string_read_gtest.cpp  string_sum_helper_gtest.cpp  task_gtest.cpp  test_isr_timer.c  test_portmacro.c  test_queue.c  test_semphr.c  test_task.c  test_timers.c  time_alarms_gtest.cpp  timelib_gtest.cpp  timer_gtest.cpp  timers_shim_gtest.cpp  times_gtest.cpp  tone_gtest.cpp  unity_config.h  unity_gtest.c  updater_gtest.cpp  wifi_gtest.cpp  wire_gtest.cpp
(+4 files in other folders)
